--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,15 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     compile 'com.android.support:appcompat-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
+    compile 'org.jetbrains.anko:anko-sdk15:0.7.1' // sdk19, sdk21, sdk23 are also available
+    compile 'org.jetbrains.anko:anko-support-v4:0.7.1' // In case you need support.v4 bindings
+    compile "org.jetbrains.anko:anko-appcompat-v7:0.9.1"
+    compile "org.jetbrains.anko:anko-design:0.9.1"
+    compile "org.jetbrains.anko:anko-recyclerview-v7:0.9.1"
+    compile 'org.jetbrains.anko:anko-sdk25:0.10.0'
 }
 repositories {
     mavenCentral()
