--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
         </activity>
         <activity android:name=".activity.TestActivity">
         </activity>
+        <activity android:name=".kotlin.KotlinActivity">
+        </activity>
+        <activity android:name=".java.TestJavaActivity">
+        </activity>
     </application>
 
 </manifest>
